--- a/index.html
+++ b/index.html
@@ -15,11 +15,25 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            padding: 20px;
         }
 
         .container {
             max-width: 600px;
             text-align: left;
+            width: 100%;
+        }
+
+        @media (max-width: 768px) {
+            body {
+                justify-content: flex-start;
+                align-items: flex-start;
+                padding: 30px 20px;
+            }
+            
+            .container {
+                margin-top: 50vh;
+            }
         }
 
         h1 {
