--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <p>interested in data science, ai/ml, web dev and more.</p>
         <p>i haven't build anything cool yet</p>
         <br>
-        <p>outside than building, I read, workout & repeat.</p>
+        <p>outside than building, I read, workout, edit short videos.</p>
         
         <div class="social">
             <span onclick="window.open('https://x.com/harshbuildss', '_blank')">x</span>
@@ -81,4 +81,5 @@
     </div>
 </body>
 </html>
+
 
