--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
             margin-top: 20px;
             font-style: italic;
             font-size: 16px;
+            white-space: nowrap;
         }
 
         .social span {
@@ -71,7 +72,7 @@
         <p>interested in data science, ai/ml, web dev and more.</p>
         <p>i haven't build anything cool yet</p>
         <br>
-        <p>outside than building, I read, workout, edit short videos.</p>
+        <p>outside than building, I read, workout & repeat.</p>
         
         <div class="social">
             <span onclick="window.open('https://x.com/harshbuildss', '_blank')">x</span>
@@ -81,5 +82,4 @@
     </div>
 </body>
 </html>
-
 
